--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@alphabatem/vue2-wallet-adapter",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"description": "Solana wallet integration for Vue 2",
 	"author": "AlphaBatem",
 	"license": "MIT",
@@ -13,7 +13,7 @@
 	"main": "./dist/index.js",
 	"exports": {
 		".": {
-			"import": "./src/index.js"
+			"import": "./dist/index.js"
 		},
 		"./styles.css": "./styles.css",
 		"./postcss.config.js": "./postcss.config.js"
