--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
 	"sourceMap": true,
 	"resolveJsonModule": true,
 	"esModuleInterop": true,
+	"allowJs": true,
 	"lib": ["esnext", "dom"],
 	"paths": {
 	  "@/*": ["./src/*"],
