--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@alphabatem/vue2-wallet-adapter",
-	"version": "0.1.701",
+	"version": "0.1.702",
 	"description": "Solana wallet integration for Vue 2",
 	"author": "AlphaBatem",
 	"license": "MIT",
@@ -27,7 +27,12 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"dependencies": {
-		"@solana/wallet-adapter-base": "^0.9",
+		"@solana-mobile/wallet-adapter-mobile": "^2.0.1",
+		"@solana/wallet-adapter-base": "^0.9.20",
+		"@solana/wallet-standard-wallet-adapter-base": "^1.0.0",
+		"@vueuse/core": "^9.3.0",
+		"@wallet-standard/app": "^1.0.1",
+		"@wallet-standard/base": "^1.0.1",
 		"portal-vue": "^2.1.7"
 	},
 	"devDependencies": {
