--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@alphabatem/vue2-wallet-adapter",
-	"version": "0.1.7224",
+	"version": "0.1.7225",
 	"description": "Solana wallet integration for Vue 2",
 	"author": "AlphaBatem",
 	"license": "MIT",
@@ -32,6 +32,7 @@
 		"@solana/wallet-adapter-base": "^0.9.23",
 		"@solana/wallet-standard-wallet-adapter-base": "^1.0.0",
 		"@vitejs/plugin-vue": "2.3.3",
+		"@vueuse/core": "^10.3.0",
 		"@wallet-standard/app": "^1.0.1",
 		"@wallet-standard/base": "^1.0.1",
 		"portal-vue": "^2.1.7"
