--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,11 +11,13 @@
 	"sourceMap": true,
 	"resolveJsonModule": true,
 	"esModuleInterop": true,
+	"skipLibCheck": true,
 	"allowJs": true,
 	"lib": ["esnext", "dom"],
 	"paths": {
-	  "@/*": ["./src/*"],
-	},
+	  "@/*": ["./src/*"]
+	}
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
